* Optimize Hash using the `expando` property to avoid costly Object.hasKey() lookups. [jddalton, kangax]

* Add unique private `expando` property. [jddalton]

* Fix regression bug in the Object._each() Safari 2 fork. [jddalton]

* Ensure Object.isHash() returns false for Hash.prototype. [jddalton]

* unit test: Update unit test framework. [jddalton, Tobie Langel]

* deprecation extension: Mark Array#reduce() as removed (commented out because native Array#reduce is used in Array#inject). [jddalton, Tobie Langel]

* deprecation extension: Modify so it will run in Fuse. [jddalton]

* deprecation extension: Cleanup Hash update helpers. [Tobie Langel]

* deprecation extension: Cleanup `assertInfoNotified`, `assertErrorNotified`, `assertWarnNotified`, and `assertNotNotified` tests, as well as add `assertEmpty` test. [Tobie Langel]

* Add support for script elements in Element#update, Element#insert, and Element#replace. [Prototype LH #573] [jddalton, kangax, Martin, Tobie Langel]

* Work around IE8 bug causing APPLET and OBJECT elements not to inherit from their prototypes. [jddalton]

* Fix Safari 2 bugs in getWindow() and Event.extend() as well as comment Element.extend(). [jddalton]

* Fix coding pattern so function expressions will work in Safari 2. [jddalton]

* Remove undeclared assignments for ECMA 3.1 strict mode compliance. [jddalton, kangax]

* Change coding pattern to utilize named function expressions and reduce FuseJS's memory footprint. [jddalton, kangax]

* Make Element#viewportOffset work with elements in iframes, ensure `rootNodeName` is a declared locally in Element#cumulativeScrollOffset, and cleanup document.viewport.getScrollOffsets(). [jddalton]

* Fix bug in Element#getOffsetParent caused when returning a null element and ensure AREA elements return their parent MAP element. [Diego Perini, jddalton]

* Rename the `global` variable in String#replace to `isGlobal` as to not be confused with the environment's `global` object. [jddalton]
