@@ -1,3 +1,5 @@
+* Fix IE bug where String#replace sets regexp's lastIndex property. [jddalton]
+
 * Optimize Hash using the `expando` property to avoid costly Object.hasKey() lookups. [jddalton, kangax]
 
 * Add unique private `expando` property. [jddalton]
